fix expandable content misalignment

--- a/src/components/CustomTable/style.scss
+++ b/src/components/CustomTable/style.scss
@@ -509,5 +509,10 @@ $characterStats: "hp", "atk", "def", "hydrodmgbonus", "geodmgbonus",
   @media (max-width: 1000px) {
     position: relative;
     left: calc(-50% + 50vw) !important;
+
+    .clickable ~ * {
+      position: relative;
+      left: calc(50% - 50vw + 10px) !important;
+    }
   }
 }
